// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerContainer only with required props renders successfully only with required props: Animating (slide in) 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 75,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
    testID="containerAnimated"
  >
    <View
      style={
        Object {
          "height": 400,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`PickerContainer only with required props renders successfully only with required props: Animating (slide out) 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 75,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
  />
</View>
`;

exports[`PickerContainer only with required props renders successfully only with required props: Before animation started 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 1000,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
    testID="containerAnimated"
  >
    <View
      style={
        Object {
          "height": 400,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`PickerContainer only with required props renders successfully only with required props: Just After slide in animation completed 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
    testID="containerAnimated"
  >
    <View
      style={
        Object {
          "height": 400,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`PickerContainer only with required props renders successfully only with required props: Just After slide in animation completed 2`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 0,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
    testID="containerAnimated"
  >
    <View
      style={
        Object {
          "height": 400,
          "width": "100%",
        }
      }
    />
  </View>
</View>
`;

exports[`PickerContainer only with required props renders successfully only with required props: Just After slide out animation completed 1`] = `null`;

exports[`PickerContainer only with required props renders successfully only with required props: Just After slide out animation completed 2`] = `null`;

exports[`PickerContainer with all props should be applied properly: PickerContainer with all props. 1`] = `
<View
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      },
    ]
  }
>
  <View
    animatedStyle={
      Object {
        "value": Object {
          "transform": Array [
            Object {
              "translateY": 1000,
            },
          ],
        },
      }
    }
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "backgroundColor": "green",
        "transform": Array [
          Object {
            "translateY": 1000,
          },
        ],
      }
    }
    testID="animatedView"
  />
</View>
`;
